src/postgres/third-party-extensions/pgrx/pgrx-tests/tests/compile-fail/too_many_cast_options.rs
use pgrx::prelude::*;

#[pg_cast(implicit, assignment)]
pub fn cast_function(foo: i32) -> i32 {
    foo
}

fn main() {}
